--- a/odoo-api/pyproject.toml
+++ b/odoo-api/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "odoo-api"
-version = "3.2.0"
+version = "3.3.0"
 description = ""
 authors = [{ name = "bastianibanez", email = "bastian.miba@gmail.com" }]
 readme = "README.md"
@@ -9,7 +9,7 @@ dependencies = [
   "pandas (>=2.2.3,<3.0.0)",
   "python-decouple (>=3.8,<4.0)",
   "pytz (>=2025.2,<2026.0)",
-  "config-manager @ git+https://github.com/NotoriosTI/libraries.git@feature/chatwoot-processor#subdirectory=config-manager",
+  "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
   "pydantic (>=2.11.7,<3.0.0)",
   "rich (>=14.2.0,<15.0.0)",
 ]
