--- a/shopify/pyproject.toml
+++ b/shopify/pyproject.toml
@@ -1,21 +1,19 @@
 [project]
 name = "shopify"
-version = "1.2.0"
+version = "1.3.0"
 description = ""
-authors = [
-    {name = "bastianibanez",email = "bastian.miba@gmail.com"}
-]
+authors = [{ name = "bastianibanez", email = "bastian.miba@gmail.com" }]
 readme = "README.md"
-requires-python = ">=3.12,<4.0"
+requires-python = ">=3.13,<4.0"
 dependencies = [
-    "requests (>=2.32.3,<3.0.0)",
-    "pandas (>=2.2.3,<3.0.0)",
-    "beautifulsoup4 (>=4.13.4,<5.0.0)",
-    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager"
+  "requests (>=2.32.3,<3.0.0)",
+  "pandas (>=2.2.3,<3.0.0)",
+  "beautifulsoup4 (>=4.13.4,<5.0.0)",
+  "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
 ]
 
 [tool.poetry]
-packages = [{include = "shopify", from = "src"}]
+packages = [{ include = "shopify", from = "src" }]
 
 
 [build-system]
