--- a/odoo-engine/pyproject.toml
+++ b/odoo-engine/pyproject.toml
@@ -29,6 +29,10 @@ packages = [{ include = "odoo_engine", from = "src" }]
 [project.scripts]
 sync = "odoo_engine.sync_manager.main:main"
 
+[tool.pytest.ini_options]
+markers = [
+  "integration: tests que requieren Odoo real / red / credenciales",
+]
 [tool.pyright]
 venvpath = "."
 venv = ".venv"
