--- a/odoo-engine/pyproject.toml
+++ b/odoo-engine/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "odoo-engine"
-version = "1.2.1"
+version = "1.2.2"
 description = ""
 authors = [{ name = "bastianibanez", email = "bastian.miba@gmail.com" }]
 readme = "README.md"
@@ -15,8 +15,8 @@ dependencies = [
   "pytest (>=8.4.2,<9.0.0)",
   "openai (>=1.50.2,<2.0.0)",
   "tiktoken (>=0.4.0,<0.9.0)",
-  "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
-  "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=dev-utils",
+  "config-manager @ git+https://github.com/NotoriosTI/libraries.git@main#subdirectory=config-manager",
+  "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@main#subdirectory=dev-utils",
   "google-cloud-bigquery (>=3.38.0,<4.0.0)",
   "scikit-learn (>=1.7.2,<2.0.0)",
   "db-dtypes (>=1.4.3,<2.0.0)",
@@ -30,9 +30,7 @@ packages = [{ include = "odoo_engine", from = "src" }]
 sync = "odoo_engine.sync_manager.main:main"
 
 [tool.pytest.ini_options]
-markers = [
-  "integration: tests que requieren Odoo real / red / credenciales",
-]
+markers = ["integration: tests que requieren Odoo real / red / credenciales"]
 [tool.pyright]
 venvpath = "."
 venv = ".venv"
